@@ -1,0 +1,40 @@
+<div id="manager-actions">
+    <span>{translate(#Action#)}: &nbsp;</span>
+    <a class="action save" href="javascript:formSubmit('frmFaqAdd','submitted',1,1)" accesskey="s">{translate(#Save#)}</a>
+    <a class="action cancel" href="{makeUrl(#list#,#adminfaq#,#faq#)}" accesskey="c">{translate(#Cancel#)}</a>
+</div>
+<div id="content">
+    <div id="content-header">
+        <h2>{translate(pageTitle)}</h2>
+        <div class="message">{msgGet()}</div>
+    </div>
+    <form action="" method="post" name="frmFaqAdd" flexy:ignore id="frmFaqAdd">
+        <fieldset class="hide">
+            {if:isAdd}
+            <input type="hidden" name="action" value="insert" />
+                {if:redir}
+                <input type="hidden" name="redir" value="{redir}" />
+                {end:}
+            {else:}
+            <input type="hidden" name="action" value="update" />
+            <input type="hidden" name="faq[faq_id]" value="{faq.faq_id}" />
+            {end:}
+        </fieldset>
+
+        <h3 flexy:if="isAdd">{translate(#add faq#,#ucfirst#)}</h3>
+        <h3 flexy:if="!isAdd">{translate(#edit faq#,#ucfirst#)}</h3>
+        <fieldset class="inside" id="faqDetails">
+            <p>
+                <label for="faq[question]"><span class="required">*</span> {translate(#Question#)}</label>
+                <span class="error" flexy:if="error[question]">{translate(error[question])}</span>
+                <textarea cols="40" rows="4" name="faq[question]" id="faq[question]">{faq.question}</textarea>
+            </p>
+            <p>
+                <label for="faq[answer]"><span class="required">*</span> {translate(#Answer#)}</label>
+                <span class="error" flexy:if="error[answer]">{translate(error[answer])}</span>
+                <textarea cols="40" rows="7" name="faq[answer]" id="faq[answer]">{faq.answer}</textarea>
+            </p>
+        </fieldset>
+    </form>
+    <div class="spacer"></div>
+</div>
