@@ -1,0 +1,28 @@
+<div id="manager-actions">
+    <span>{translate(#Action#)}: &nbsp;</span>
+    <a class="action save" href="javascript:doSub();formSubmit('fm','submitted',1,1)">{translate(#Save#)}</a><a class="action cancel" href="{makeUrl(##,#adminfaq#,#faq#)}">{translate(#Cancel#)}</a>
+</div>
+<div id="content">
+    <div id="content-header">
+        <h2>{translate(pageTitle)}</h2>
+        <div class="message">{msgGet()}</div>
+    </div>
+    <form name="fm" method="post" flexy:ignore id="fm">
+        <h3>{translate(#reorder faqs#,#initcaps#)}</h3>
+        <fieldset class="inside">
+            <input type="hidden" name="action" value="{action}" /> 
+            <input type="hidden" name=".items" /> 
+
+            <div id="faqSelector">
+                <select name="item" size="15">
+                    {generateSelect(aFaqs):h}
+                </select>
+            </div>
+            <div id="faqReorder">
+                <a href="#here" class="faqMoveUp" onclick="return orderModule(0)">{translate(#move up#)}</a>
+                <a href="#here" class="faqMoveDown" onclick="return orderModule(1)">{translate(#move down#)}</a>
+            </div>
+        </fieldset>
+    </form>
+    <div class="spacer"></div>
+</div>
